[package]
name = "test_coprocessor"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
tikv = { path = "../../" }
tipb = { git = "https://github.com/pingcap/tipb.git" }
# kvproto = { git = "https://github.com/pingcap/kvproto.git" }
kvproto = { path = "/home/qupeng/github.com/pingcap/kvproto" }
protobuf = "~2.0"
test_storage = { path = "../test_storage" }
futures = "0.1"
