[package]
name = "test_coprocessor"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
tikv_util = { path = "../tikv_util" }
tikv = { path = "../../", default-features = false }
# tipb = { git = "https://github.com/pingcap/tipb.git" }
tipb = { path = "/home/qupeng/github.com/pingcap/tipb" }
kvproto = { git = "https://github.com/hicqu/kvproto.git", branch = "3.0-tower-grpc" }
protobuf = "~2.0"
test_storage = { path = "../test_storage" }
futures = "0.1"
